--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #f1f1f1;
   --foreground: #171717;
 }
 
@@ -11,6 +11,10 @@
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+  }
+
+  .text-error {
+    @apply bg-dark text-accent;
   }
 }
 
@@ -94,8 +98,4 @@ html {
 
 .text-button {
   @apply text-sm md:text-lg;
-}
-
-.text-error {
-  @apply bg-dark text-accent;
 }
