Enhance dark mode support and UI consistency across components
- Updated Button component styles for better dark mode compatibility.
- Implemented dark mode detection in CalendlyScheduler, Footer, Header, Hero, Modal, and HowItWorks components.
- Adjusted color schemes in Contact, Services, and Footer components for improved readability in dark mode.
- Added smooth scrolling functionality with offset for better user experience.
- Refactored utility functions to include scrollToElement for smooth scrolling.
- Enhanced Tailwind CSS configuration with new animations for fadeIn and fadeOut effects.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,12 +12,16 @@ body {
 :root {
   --background: #f1f1f1;
   --foreground: #171717;
+  --primary-shadow: rgba(112, 197, 251, 0.9);
+  --accent-shadow: rgba(0, 239, 145, 0.9);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --primary-shadow: rgba(112, 197, 251, 0.9);
+    --accent-shadow: rgba(0, 239, 145, 0.9);
   }
 
   .text-error {
